# aim

./: AUDIT.md  CLAUDE.md  Cargo.toml  IDEAS.md  MIGRATION_PLAN.md  README.md
data/: .push.txt.swp  file.txt  lst2.md  push.txt  sta2.md
docs/: ARCHITECTURE.md  AUDIT.md  COMMANDS.md  GAP.md  PLAN.md
docs/archive/: AUDIT.md  IDEAS.md  MIGRATION_STATUS.md  refactor-PLAN.md
plans/: refactor-PLAN.md
src/: cli.rs  config.rs  config_test.rs  error.rs  error_test.rs  lib.rs  main.rs  types.rs  utils.rs
src/adb/: connection.rs  file_transfer.rs  mod.rs  protocol.rs  server.rs  shell.rs
src/commands/: _common.rs  adb.rs  command.rs  config.rs  copy.rs  dmesg.rs  foo.rs  getprop.rs  getprops.rs  hostname.rs  lib.rs  ll.rs  ls.rs  ls_test.rs  mod.rs  model.rs  perfetto.rs  pull.rs  push.rs  rename.rs  run.rs  runner.rs  screenrecord.rs  screenshot.rs  server.rs  shell.rs  version.rs
src/commands/app/: backup.rs  clear.rs  info.rs  list.rs  mod.rs  permissions.rs  pull.rs  restore.rs  start.rs  stop.rs  uninstall.rs
src/core/: context.rs  mod.rs  types.rs
src/device/: device_info.rs  device_info_test.rs  manager.rs  manager_test.rs  mod.rs
src/formatters/: ls.rs  mod.rs  version.rs
src/output/: device.rs  file.rs  mod.rs  property.rs
src/progress/: mod.rs
src/subcommands/: _ls.rs  adb.rs  command.rs  config.rs  config_test.rs  copy.rs  copy_test.rs  dmesg.rs  foo.rs  getprop.rs  getprops.rs  ls.rs  mod.rs  model.rs  perfetto.rs  rename.rs  rename_test.rs  run.rs  screenrecord.rs  screenshot.rs  server.rs  version.rs
src/testing/: fixtures.rs  mocks.rs  mod.rs
tests/fixtures/: slowcat.sh
