[package]
name = "aim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.1"
comfy-table = "7.1.3"
env_logger = "0.11.5"
log = "0.4.22"
petname = "2.0.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_seeder = "0.3.0"
rand_xorshift = "0.3.0"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8"
dirs = "5.0"
toml_edit = "0.21.0"
tempfile = "3.14.0"
anyhow = "1.0"
indicatif = "0.17.9"
bincode = "1.3.3"
lazy_static = "1.4"
chrono = "0.4.39"
byteorder = "1.5.0"
walkdir = "2.5.0"
crossterm = "0.28.1"
shellexpand = "3.1.0"
colored_json = "5.0.0"

[dev-dependencies]
tempfile = "3.8"
