[package]
name = "aim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
comfy-table = "7.1.4"
env_logger = "0.11.8"
log = "0.4.27"
petname = "3.0.0-alpha.2"
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_seeder = "0.4.0"
rand_xorshift = "0.4.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9"
dirs = "6.0"
toml_edit = "0.23"
tempfile = "3.20.0"
anyhow = "1.0"
indicatif = "0.18.0"
bincode = "2.0.1"
lazy_static = "1.5"
chrono = "0.4.41"
byteorder = "1.5.0"
walkdir = "2.5.0"
crossterm = "0.29.0"
shellexpand = "3.1.1"
colored_json = "5.0.0"
colored = "3.0.0"
thiserror = "2.0"
async-trait = "0.1"
bytes = "1.10"

[dev-dependencies]
tempfile = "3.20"
